charts/mediaserver/tdarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr-node
  labels:
    app: tdarr-node
    app.kubernetes.io/name: tdarr-node
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tdarr-node
      app.kubernetes.io/name: tdarr-node
  template:
    metadata:
      labels:
        app: tdarr-node
        app.kubernetes.io/name: tdarr-node
    spec:
      volumes:
        - name: mediaserver-volume
          hostPath:
            path: /mnt/media
        - name: transcode
          emptyDir: {}
      containers:
        - name: tdarr-node
          image: ghcr.io/haveagitgat/tdarr_node:2.87.01
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: mediaserver-volume
              mountPath: /app/configs
              subPath: config/tdarr-node/configs
            - name: mediaserver-volume
              mountPath: /app/logs
              subPath: config/tdarr-node/logs
            - name: mediaserver-volume
              mountPath: /media
              subPath: media
            - name: transcode
              mountPath: /temp
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              nvidia.com/gpu: 1
