charts/mediaserver/tdarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tdarr
  labels:
    app: tdarr
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app: tdarr
  serviceName: tdarr
  template:
    metadata:
      labels:
        app: tdarr
    spec:
      volumes:
        - name: mediaserver-volume
          hostPath:
            path: /mnt/media
        - name: transcode
          emptyDir: {}
      containers:
        - name: tdarr
          image: ghcr.io/haveagitgat/tdarr:2.87.01
          imagePullPolicy: IfNotPresent
          ports:
            - name: webui
              containerPort: 8265
              protocol: TCP
            - name: server
              containerPort: 8266
              protocol: TCP
          startupProbe:
            httpGet:
              path: /
              port: 8265
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 60 # 5 minutes
          readinessProbe:
            httpGet:
              path: /
              port: 8265
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: mediaserver-volume
              mountPath: /app/server
              subPath: config/tdarr/server
            - name: mediaserver-volume
              mountPath: /app/configs
              subPath: config/tdarr/configs
            - name: mediaserver-volume
              mountPath: /app/logs
              subPath: config/tdarr/logs
            - name: mediaserver-volume
              mountPath: /media
              subPath: media
            - name: transcode
              mountPath: /temp
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              nvidia.com/gpu: 1
