charts/mediaserver/tdarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  labels:
    app: tdarr
spec:
  ports:
    - port: 8265
      targetPort: 8265
      protocol: TCP
      name: webui
    - port: 8266
      targetPort: 8266
      protocol: TCP
      name: server
  selector:
    app: tdarr
