charts/mediaserver/tdarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tdarr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - tdarr.int.imdevinc.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tdarr
          namespace: mediaserver
          port: 8265
